force-app/main/default/objects/Garage__c/Garage__c.object-meta.xml
<CustomObject>
    <description>Contains attributes describing a garage.</description>
    <label>Garage</label>
    <nameField>
        <displayFormat>G-{00000}</displayFormat>
        <label>Garage Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>