force-app/main/default/objects/Garage__c/fields/Location_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Location_Longitude__c</fullName>
    <inlineHelpText>The latitude of the garage location.</inlineHelpText>
    <label>Location Longitude</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>